[gd_scene load_steps=12 format=3 uid="uid://bt5xq8ojsgw8"]

[ext_resource type="Script" path="res://guess_the_number/guess_the_number.gd" id="1_8u2vg"]
[ext_resource type="Texture2D" uid="uid://do7wbt5grfkgk" path="res://res/bg_start.png" id="2_rm2rk"]
[ext_resource type="Texture2D" uid="uid://47nqlnnnd0u8" path="res://res/100X50.png" id="3_wdh4w"]
[ext_resource type="FontFile" uid="uid://cfku5f1y213fl" path="res://res/EvilEmpire-4BBVK.ttf" id="4_lxiho"]
[ext_resource type="Texture2D" uid="uid://br5hpb2hmt5i4" path="res://res/60X60_ora.png" id="5_whg6b"]
[ext_resource type="FontFile" uid="uid://trhnjtln4rdp" path="res://res/Valorax-lg25V.otf" id="6_yq4ic"]
[ext_resource type="Texture2D" uid="uid://blkhihn26yrb8" path="res://res/60X60_green.png" id="7_th3w8"]
[ext_resource type="Script" path="res://guess_the_number/gtn_keyboard.gd" id="8_x88lc"]
[ext_resource type="Texture2D" uid="uid://b3dvutqa8wowg" path="res://res/60X60_blue.png" id="9_rxsd6"]
[ext_resource type="Texture2D" uid="uid://8iefgt0u46nk" path="res://res/100X50_blue.png" id="10_ypgvf"]
[ext_resource type="Texture2D" uid="uid://erqphjujpk2t" path="res://res/100X50_green.png" id="11_u1a4n"]

[node name="guess_the_number" type="Node2D"]
script = ExtResource("1_8u2vg")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(257.875, 414.987)
scale = Vector2(1.12781, 1.13613)
texture = ExtResource("2_rm2rk")

[node name="Button_back" type="Button" parent="."]
offset_left = 26.0
offset_top = 39.0
offset_right = 134.0
offset_bottom = 97.0
icon = ExtResource("3_wdh4w")

[node name="RichTextLabel" type="RichTextLabel" parent="Button_back"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 98.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 26
text = "<- back"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 17.0
offset_top = 803.0
offset_right = 219.0
offset_bottom = 829.0
theme_override_colors/default_color = Color(0.141176, 0.215686, 0.388235, 1)
bbcode_enabled = true
text = "Now: guess_the_number"

[node name="Button_num1" type="Button" parent="."]
offset_left = 25.0
offset_top = 204.0
offset_right = 93.0
offset_bottom = 272.0
icon = ExtResource("5_whg6b")

[node name="value_num1" type="RichTextLabel" parent="Button_num1"]
layout_mode = 0
offset_left = 13.0
offset_top = 23.0
offset_right = 64.0
offset_bottom = 54.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "1233"

[node name="Button_score" type="Button" parent="."]
offset_left = 366.0
offset_top = 40.0
offset_right = 474.0
offset_bottom = 98.0
icon = ExtResource("3_wdh4w")

[node name="value_score" type="RichTextLabel" parent="Button_score"]
layout_mode = 0
offset_left = 27.0
offset_top = 15.0
offset_right = 106.0
offset_bottom = 52.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "000"

[node name="score_text" type="RichTextLabel" parent="Button_score"]
layout_mode = 0
offset_left = 18.0
offset_top = 61.0
offset_right = 94.0
offset_bottom = 82.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_yq4ic")
theme_override_font_sizes/normal_font_size = 17
text = "score"

[node name="Button_num2" type="Button" parent="."]
offset_left = 104.0
offset_top = 212.0
offset_right = 172.0
offset_bottom = 280.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("7_th3w8")

[node name="value_num1" type="RichTextLabel" parent="Button_num2"]
layout_mode = 0
offset_left = 20.0
offset_top = 22.0
offset_right = 50.0
offset_bottom = 51.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "12"

[node name="Button_num3" type="Button" parent="."]
offset_left = 181.0
offset_top = 207.0
offset_right = 249.0
offset_bottom = 275.0
icon = ExtResource("5_whg6b")

[node name="value_num1" type="RichTextLabel" parent="Button_num3"]
layout_mode = 0
offset_left = 10.0
offset_top = 22.0
offset_right = 61.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "1233"

[node name="Button_num4" type="Button" parent="."]
offset_left = 262.0
offset_top = 214.0
offset_right = 330.0
offset_bottom = 282.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("7_th3w8")

[node name="value_num1" type="RichTextLabel" parent="Button_num4"]
layout_mode = 0
offset_left = 22.0
offset_top = 23.0
offset_right = 51.0
offset_bottom = 54.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "12"

[node name="Button_num5" type="Button" parent="."]
offset_left = 334.0
offset_top = 208.0
offset_right = 402.0
offset_bottom = 276.0
icon = ExtResource("5_whg6b")

[node name="value_num1" type="RichTextLabel" parent="Button_num5"]
layout_mode = 0
offset_left = 10.0
offset_top = 22.0
offset_right = 61.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "1233"

[node name="Button_num6" type="Button" parent="."]
offset_left = 446.0
offset_top = 208.0
offset_right = 514.0
offset_bottom = 276.0
icon = ExtResource("5_whg6b")

[node name="value_num1" type="RichTextLabel" parent="Button_num6"]
layout_mode = 0
offset_left = 10.0
offset_top = 22.0
offset_right = 61.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "1233"

[node name="keyboard" type="Node2D" parent="."]
script = ExtResource("8_x88lc")

[node name="Button_0" type="Button" parent="keyboard"]
offset_left = 234.0
offset_top = 684.0
offset_right = 302.0
offset_bottom = 752.0
icon = ExtResource("9_rxsd6")

[node name="value_0" type="RichTextLabel" parent="keyboard/Button_0"]
layout_mode = 0
offset_left = 28.0
offset_top = 22.0
offset_right = 46.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "0"

[node name="Button_1" type="Button" parent="keyboard"]
offset_left = 126.0
offset_top = 413.0
offset_right = 194.0
offset_bottom = 481.0
icon = ExtResource("9_rxsd6")

[node name="value_1" type="RichTextLabel" parent="keyboard/Button_1"]
layout_mode = 0
offset_left = 31.0
offset_top = 22.0
offset_right = 42.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "1"

[node name="Button_2" type="Button" parent="keyboard"]
offset_left = 233.0
offset_top = 413.0
offset_right = 301.0
offset_bottom = 481.0
icon = ExtResource("9_rxsd6")

[node name="value_2" type="RichTextLabel" parent="keyboard/Button_2"]
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 43.0
offset_bottom = 55.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "2"

[node name="Button_3" type="Button" parent="keyboard"]
offset_left = 339.0
offset_top = 413.0
offset_right = 407.0
offset_bottom = 481.0
icon = ExtResource("9_rxsd6")

[node name="value_3" type="RichTextLabel" parent="keyboard/Button_3"]
layout_mode = 0
offset_left = 28.0
offset_top = 24.0
offset_right = 44.0
offset_bottom = 55.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "3"

[node name="Button_4" type="Button" parent="keyboard"]
offset_left = 128.0
offset_top = 504.0
offset_right = 196.0
offset_bottom = 572.0
icon = ExtResource("9_rxsd6")

[node name="value_4" type="RichTextLabel" parent="keyboard/Button_4"]
layout_mode = 0
offset_left = 28.0
offset_top = 23.0
offset_right = 41.0
offset_bottom = 54.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "4"

[node name="Button_5" type="Button" parent="keyboard"]
offset_left = 234.0
offset_top = 505.0
offset_right = 302.0
offset_bottom = 573.0
icon = ExtResource("9_rxsd6")

[node name="value_5" type="RichTextLabel" parent="keyboard/Button_5"]
layout_mode = 0
offset_left = 27.0
offset_top = 22.0
offset_right = 40.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "5"

[node name="Button_6" type="Button" parent="keyboard"]
offset_left = 339.0
offset_top = 506.0
offset_right = 407.0
offset_bottom = 574.0
icon = ExtResource("9_rxsd6")

[node name="value_6" type="RichTextLabel" parent="keyboard/Button_6"]
layout_mode = 0
offset_left = 27.0
offset_top = 20.0
offset_right = 43.0
offset_bottom = 51.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "6"

[node name="Button_7" type="Button" parent="keyboard"]
offset_left = 131.0
offset_top = 594.0
offset_right = 199.0
offset_bottom = 662.0
icon = ExtResource("9_rxsd6")

[node name="value_7" type="RichTextLabel" parent="keyboard/Button_7"]
layout_mode = 0
offset_left = 27.0
offset_top = 22.0
offset_right = 40.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "7"

[node name="Button_8" type="Button" parent="keyboard"]
offset_left = 234.0
offset_top = 592.0
offset_right = 302.0
offset_bottom = 660.0
icon = ExtResource("9_rxsd6")

[node name="value_8" type="RichTextLabel" parent="keyboard/Button_8"]
layout_mode = 0
offset_left = 29.0
offset_top = 22.0
offset_right = 41.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "8"

[node name="Button_9" type="Button" parent="keyboard"]
offset_left = 336.0
offset_top = 591.0
offset_right = 404.0
offset_bottom = 659.0
icon = ExtResource("9_rxsd6")

[node name="value_9" type="RichTextLabel" parent="keyboard/Button_9"]
layout_mode = 0
offset_left = 29.0
offset_top = 20.0
offset_right = 43.0
offset_bottom = 51.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "9"

[node name="Button_backSpace" type="Button" parent="keyboard"]
offset_left = 336.0
offset_top = 336.0
offset_right = 444.0
offset_bottom = 394.0
icon = ExtResource("10_ypgvf")

[node name="value_num1" type="RichTextLabel" parent="keyboard/Button_backSpace"]
layout_mode = 0
offset_left = 29.0
offset_top = 10.0
offset_right = 71.0
offset_bottom = 49.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "<--"

[node name="Button_display" type="Button" parent="keyboard"]
offset_left = 126.0
offset_top = 337.0
offset_right = 234.0
offset_bottom = 395.0
icon = ExtResource("11_u1a4n")

[node name="value_display_vakue" type="RichTextLabel" parent="keyboard/Button_display"]
layout_mode = 0
offset_left = 26.0
offset_top = 17.0
offset_right = 77.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "1233"

[node name="Button_enter" type="Button" parent="keyboard"]
offset_left = 339.0
offset_top = 686.0
offset_right = 447.0
offset_bottom = 744.0
icon = ExtResource("10_ypgvf")

[node name="value_num1" type="RichTextLabel" parent="keyboard/Button_enter"]
layout_mode = 0
offset_left = 25.0
offset_top = 16.0
offset_right = 98.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_lxiho")
theme_override_font_sizes/normal_font_size = 27
text = "Enter"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 419.0
offset_top = 230.0
offset_right = 440.0
offset_bottom = 260.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
text = "="
